Replace bsf-dependency with JSR-223 (javax.script)